# conpty

./: .appveyor.yml  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yaml
bindings/: Cargo.toml  build.rs
bindings/src/: lib.rs
examples/: basic.rs  cat.rs  console.rs  echo.rs  ping.rs  windows_subsystem.rs
src/: console.rs  error.rs  io.rs  lib.rs  main.rs  process.rs  util.rs
src/io/: mod.rs  reader.rs  writer.rs
tests/: io.rs  pipe.rs  proc_attibutes.rs  test_process.rs
tests/util/: cat.py
