[package]
name = "conpty-bindings"
version = "0.0.0"
edition = "2018"
authors = ["Maxim Zhiburt <zhiburt@gmail.com>"]
description = "A windows bindings for conpty library"
repository = "https://github.com/zhiburt/conpty"
license = "MIT"

[dependencies]
windows = "0.19.0"

[build-dependencies]
windows = "0.19.0"
